implemented a SoftReference image cache